--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^5.3.4"
   },
   "devDependencies": {
